packages/typ/tests/fixtures/diagnostics/0717_fcm_local_abstract_wrong_arg_06.ml.infer.expected
File "0717_fcm_local_abstract_wrong_arg_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0717_fcm_local_abstract_wrong_arg_06 is not a valid module name.

File "0717_fcm_local_abstract_wrong_arg_06.ml", line 14, characters 61-65:
14 | let _ = use_zeta (module M_zeta : Id_zeta with type t = int) true
                                                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
